snapshots/syntax/statements/objects/events/raiseevent_statement_with_string_concatenation.snap
---
source: src/syntax/statements/objects/events.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: MessageSent
                - kind: LeftParenthesis
                  text: (
                - kind: StringLiteral
                  text: "\"Hello \""
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: userName
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"!\""
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
